; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_node.c_nfs_nhinit.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_node.c_nfs_nhinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"nfs_node_hash\00", align 1
@LCK_GRP_ATTR_NULL = common dso_local global i32 0, align 4
@nfs_node_hash_lck_grp = common dso_local global i8* null, align 8
@LCK_ATTR_NULL = common dso_local global i32 0, align 4
@nfs_node_hash_mutex = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"nfs_node\00", align 1
@nfs_node_lck_grp = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [9 x i8] c"nfs_data\00", align 1
@nfs_data_lck_grp = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nfs_nhinit() #0 {
  %1 = load i32, i32* @LCK_GRP_ATTR_NULL, align 4
  %2 = call i8* @lck_grp_alloc_init(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %1)
  store i8* %2, i8** @nfs_node_hash_lck_grp, align 8
  %3 = load i8*, i8** @nfs_node_hash_lck_grp, align 8
  %4 = load i32, i32* @LCK_ATTR_NULL, align 4
  %5 = call i32 @lck_mtx_alloc_init(i8* %3, i32 %4)
  store i32 %5, i32* @nfs_node_hash_mutex, align 4
  %6 = load i32, i32* @LCK_GRP_ATTR_NULL, align 4
  %7 = call i8* @lck_grp_alloc_init(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %6)
  store i8* %7, i8** @nfs_node_lck_grp, align 8
  %8 = load i32, i32* @LCK_GRP_ATTR_NULL, align 4
  %9 = call i8* @lck_grp_alloc_init(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 %8)
  store i8* %9, i8** @nfs_data_lck_grp, align 8
  ret void
}

declare dso_local i8* @lck_grp_alloc_init(i8*, i32) #1

declare dso_local i32 @lck_mtx_alloc_init(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
